<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <EditText
        android:id="@+id/et_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_edit"
        android:ems="20"
        android:inputType="textPersonName"
        android:padding="5dp"
        android:text="Title"
        android:textColor="#d3d3d3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_colors_picker"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_title" />

    <View
        android:id="@+id/divder_1"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="10dp"
        android:background="@color/editTextBackgroundDark"
        app:layout_constraintTop_toBottomOf="@id/rv_colors_picker" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_frequency"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/divder_1">

        <TextView
            android:id="@+id/tv_frequency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/frequency"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_times"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/times_a_week"
            android:textColor="@color/editTextBackgroundDark"
            android:textSize="11sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_frequency" />

        <TextView
            android:id="@+id/tv_plus_button"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:text="+"
            android:textColor="@color/white"
            android:textSize="26sp"
            android:gravity="center"
            android:background="@drawable/rounded_edit"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tv_number"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:text="3"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tv_plus_button"/>


        <TextView
            android:id="@+id/tv_minus_button"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:text="-"
            android:textColor="@color/white"
            android:textSize="26sp"
            android:gravity="center|center_vertical"
            android:background="@drawable/rounded_edit"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tv_number"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/divder_2"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="10dp"
        android:background="@color/editTextBackgroundDark"
        app:layout_constraintTop_toBottomOf="@id/cl_frequency" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_reminder"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/divder_2">

        <TextView
            android:id="@+id/tv_reminder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/reminder"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/just_notification"
            android:textColor="@color/editTextBackgroundDark"
            android:textSize="11sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_reminder" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch_click"
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/divder_3"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="10dp"
        android:background="@color/editTextBackgroundDark"
        app:layout_constraintTop_toBottomOf="@id/cl_reminder" />

    <Button
        android:id="@+id/button_add"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="40dp"
        app:layout_constraintTop_toBottomOf="@id/divder_3"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/rounded_edit"
        android:text="@string/add"
        />


</androidx.constraintlayout.widget.ConstraintLayout>